# project-vani-api

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  extract.txt  log.txt  pyproject.toml  requirements.txt  start.py  vercel.json
app/: Config.py  http_exception.py  main.py  oauth2.py
app/auth/: jwt_bearer.py  jwt_handler.py
app/core/: app_configure.py  events.py
app/database/: __init__.py  exceptions.py
app/database/connections/: db_abs.py  mongo.py
app/database/models/: Chemist.py  Inventory.py  Invoices.py  Order_Details.py  Orders.py  Payment.py  Product.py  Product_Stock.py  Sale_Details.py  Sales.py  Stock_Movement.py  Stockist.py  __init__.py  common.py  entity.py  token.py  user.py
app/database/repositories/: Chemist.py  Inventory.py  Invoices.py  Order_Details.py  Orders.py  Payment.py  Product.py  Product_Stock.py  Sale_Details.py  Sales.py  Stock_Movement.py  Stockist.py  analytics.py  extraction.py  token.py  user.py
app/database/repositories/crud/: base.py  base_mongo_crud.py  list.py
app/routes/api/: routers.py
app/routes/api/v1/: admin.py  analytics.py  auth.py  chemist.py  extraction.py  inventory.py  orders.py  product.py  product_stock.py  sales.py  stock_movement.py
app/schema/: enums.py  health.py  token.py
app/utils/: cloudinary_client.py  generatePassword.py  hashing.py  logging.py  mailer_module.py  openai.py  uptime.py
app/utils/templates/: parser.py
app/utils/templates/mail/: forgot_password.html  onboard.html
app/utils/templates/razorpay/: razorpayCheckout.html
